--- a/NeuralNetwork/NeuralNetwork/NeuralNetwork.csproj
+++ b/NeuralNetwork/NeuralNetwork/NeuralNetwork.csproj
@@ -51,11 +51,6 @@
     <Compile Include="Helpers\ExportHelper.cs" />
     <Compile Include="Helpers\HelperNetwork.cs" />
     <Compile Include="Helpers\ImportHelper.cs" />
-    <Compile Include="NetworkModels\Dataset.cs" />
-    <Compile Include="NetworkModels\Network.cs" />
-    <Compile Include="NetworkModels\Neuron.cs" />
-    <Compile Include="NetworkModels\Sigmoid.cs" />
-    <Compile Include="NetworkModels\Synapse.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -66,6 +61,12 @@
   <ItemGroup>
     <Content Include="DataExamples\DatasetExample.txt" />
     <Content Include="DataExamples\NetworkExample.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\NeuralNetwork.Core\NeuralNetwork.Core.csproj">
+      <Project>{eef56b89-c86c-4e37-819c-85c9dc775dd7}</Project>
+      <Name>NeuralNetwork.Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
