--- a/NeuralNetwork/NeuralNetwork/packages.config
+++ b/NeuralNetwork/NeuralNetwork/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Microsoft.Net.Compilers" version="2.6.1" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
+  <package id="NUnit" version="2.6.4" targetFramework="net46" />
 </packages>
