--- a/NeuralNetwork/NeuralNetwork.Core/NeuralNetwork.Core.csproj
+++ b/NeuralNetwork/NeuralNetwork.Core/NeuralNetwork.Core.csproj
@@ -41,6 +41,7 @@
   <ItemGroup>
     <Compile Include="NetworkModels\Dataset.cs" />
     <Compile Include="NetworkModels\Network.cs" />
+    <Compile Include="NetworkModels\NetworkBackProp.cs" />
     <Compile Include="NetworkModels\Neuron.cs" />
     <Compile Include="NetworkModels\Sigmoid.cs" />
     <Compile Include="NetworkModels\Synapse.cs" />
