--- a/NeuralNetwork/NeuralNetwork.Core/NeuralNetwork.Core.csproj
+++ b/NeuralNetwork/NeuralNetwork.Core/NeuralNetwork.Core.csproj
@@ -43,15 +43,15 @@
     <Compile Include="ActivationFunctions\IActivationFunction.cs" />
     <Compile Include="ActivationFunctions\RationalSigmoid.cs" />
     <Compile Include="ActivationFunctions\Tanh.cs" />
-    <Compile Include="TrainParams\BackPropTrainParams.cs" />
+    <Compile Include="Params\BackPropTrainParams.cs" />
     <Compile Include="NetworkModels\Dataset.cs" />
     <Compile Include="NetworkModels\Network.cs" />
     <Compile Include="NetworkModels\NetworkBackProp.cs" />
     <Compile Include="NetworkModels\Neuron.cs" />
     <Compile Include="ActivationFunctions\Sigmoid.cs" />
     <Compile Include="NetworkModels\Synapse.cs" />
-    <Compile Include="TrainParams\TrainingType.cs" />
-    <Compile Include="TrainParams\TrainParams.cs" />
+    <Compile Include="Params\TrainingType.cs" />
+    <Compile Include="Params\TrainParams.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
